Coingecko.com marketcap data support
Added support for Coingecko marketcap data.

--- a/changelog.txt
+++ b/changelog.txt
@@ -796,6 +796,19 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.1.8:
+-Coingecko.com marketcap data support
+-------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
 
 
 
