--- a/changelog.txt
+++ b/changelog.txt
@@ -803,6 +803,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.1.9:
+-Semantics, optimization, cleanup
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
