Optimized cron job price alerts back end / UI
Optimized cron job price alerts back end / UI

--- a/changelog.txt
+++ b/changelog.txt
@@ -818,6 +818,18 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.1:
+-Optimized cron job price alerts back end / UI
+-------------------------------------------------------------------
+
+
+
+
+
+
+
+
 
 
 
