Improved cron alerts UX
Added config setting to auto refresh cron alert prices cache every X days if desired.

--- a/changelog.txt
+++ b/changelog.txt
@@ -820,7 +820,7 @@ app doing the data requests, not a malicious bot)
 
 -------------------------------------------------------------------
 2.2.1:
--Optimized cron job price alerts back end / UI
+-Optimized cron job price alerts back end / UX
 -------------------------------------------------------------------
 
 
