Tweaks to new price alerts feature
Tweaks to new price alerts feature

--- a/changelog.txt
+++ b/changelog.txt
@@ -825,6 +825,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.2:
+-Tweaks to new price alerts feature
+-------------------------------------------------------------------
+
+
+
+
 
 
 
