Config to adjust chain stats cache time
Config to adjust chain stats cache time

--- a/changelog.txt
+++ b/changelog.txt
@@ -832,6 +832,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.3:
+-Config to adjust chain stats cache time
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
