Mining calculator tweaks
Mining calculator tweaks

--- a/changelog.txt
+++ b/changelog.txt
@@ -851,6 +851,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.5:
+-Tweaks to mining calculator setups
+-------------------------------------------------------------------
+
+
+
 
 
 
