--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,5 @@ API system for requesting market values / portfolio values
 SQL-based accounts for storing API keys, coin amounts
 
 2-way encryption (unlocked with 6 digit PIN) for storing coin amounts
+
+Email / text / alexa alerts on proxy failures
