--- a/changelog.txt
+++ b/changelog.txt
@@ -861,6 +861,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.6:
+-Alerts / checkups on proxy failure
+-Simplified / highly compatible proxy config settings
+-------------------------------------------------------------------
+
+
+
+
 
 
 
