Proxy check tweaks, IDEX exchange API support
Debugged / optimized new proxy checkup feature, added API support fot the IDEX exchange markets.

--- a/changelog.txt
+++ b/changelog.txt
@@ -865,6 +865,7 @@ app doing the data requests, not a malicious bot)
 2.2.6:
 -Alerts / checkups on proxy failure
 -Simplified / highly compatible proxy config settings
+-IDEX exchange API support
 -------------------------------------------------------------------
 
 
