--- a/changelog.txt
+++ b/changelog.txt
@@ -881,6 +881,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.8:
+-Tweaks
+-------------------------------------------------------------------
+
+
+
+
 
 
 
