Exchange volume, UI tweaks
-Exchange market volume data (included in UI / alerts)
-UI tweaks

--- a/changelog.txt
+++ b/changelog.txt
@@ -889,6 +889,12 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.2.9:
+-Exchange market volume data (included in UI / alerts)
+-UI tweaks
+-------------------------------------------------------------------
+
 
 
 
