--- a/changelog.txt
+++ b/changelog.txt
@@ -898,6 +898,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.3.0:
+-Tweaks
+-------------------------------------------------------------------
+
+
+
 
 
 
