--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,8 @@
 
 API system for requesting market values / portfolio values
 
-SQL-based accounts for storing API keys, coin amounts
+SQL-based accounts for storing API keys, coin amounts??
 
-2-way encryption (unlocked with 6 digit PIN) for storing coin amounts
+2-way encryption (unlocked with 6 digit PIN) for storing coin amounts??
 
 Modularize the alert / messages services, to reuse code effeciently
