--- a/changelog.txt
+++ b/changelog.txt
@@ -902,7 +902,8 @@ app doing the data requests, not a malicious bot)
 2.3.0:
 -UI + backend tweaks / bug fixes
 -SMTP email setting option
--Organized / categorized back end functions
+-Organized / categorized back end functions, config file settings
+-Proxy user/pass option
 -------------------------------------------------------------------
 
 
