--- a/changelog.txt
+++ b/changelog.txt
@@ -909,6 +909,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.3.1:
+-Tweaks
+-Error log system, with emailing support
+-------------------------------------------------------------------
+
+
+
+
 
 
 
