UI setting for choosing table sort default
Settings page option for choosing preferred table sorting defaults

--- a/changelog.txt
+++ b/changelog.txt
@@ -913,6 +913,7 @@ app doing the data requests, not a malicious bot)
 2.3.1:
 -Tweaks
 -Error log system, with emailing support
+-Settings page option for choosing preferred table sorting defaults
 -------------------------------------------------------------------
 
 
