--- a/changelog.txt
+++ b/changelog.txt
@@ -929,6 +929,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.3.3:
+-Cleaned up a few remaining cobwebs left behind from overhaul. :-)
+-------------------------------------------------------------------
+
+
+
+
 
 
 
