--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,5 @@ SQL-based accounts for storing API keys, coin amounts??
 2-way encryption (unlocked with 6 digit PIN) for storing coin amounts??
 
 Modularize the alert / messages services, to reuse code effeciently
+
+Remove liqui / gatecoin.io API logic and coin data (they closed down)
