--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,13 @@
 
 
-API system for requesting market values / portfolio values
+RESTFUL API system for requesting market values / portfolio values
 
-SQL-based accounts for storing API keys, coin amounts??
-
-2-way encryption (unlocked with 6 digit PIN) for storing coin amounts??
+Simple trading bot, to run from cron / cli
 
 Modularize the alert / messages services, to reuse code effeciently
 
 Remove liqui / gatecoin.io API logic and coin data (they closed down)
+
+SQL-based accounts for storing API keys, coin amounts??
+
+2-way encryption (unlocked with 6 digit PIN) for storing coin amounts??
