--- a/changelog.txt
+++ b/changelog.txt
@@ -957,6 +957,8 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 2.3.6:
 -Config setting for only allowing exchange price alerts if a minimum 24 hour volume has been met
+-SMTP error logging
+-Semantics
 -------------------------------------------------------------------
 
 
