--- a/changelog.txt
+++ b/changelog.txt
@@ -966,6 +966,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.3.7:
+-Minor revisions
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
