Fixed error logs purge bug
Fixed error logs purge bug

--- a/changelog.txt
+++ b/changelog.txt
@@ -969,6 +969,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 2.3.7:
 -Minor revisions
+-Fixed error logs purge bug
 -------------------------------------------------------------------
 
 
