--- a/changelog.txt
+++ b/changelog.txt
@@ -970,6 +970,8 @@ app doing the data requests, not a malicious bot)
 2.3.7:
 -Minor revisions
 -Fixed error logs purge bug
+-Fixed audio alerts bug
+-UX work with enabled volume filter for exchange price alert messages
 -------------------------------------------------------------------
 
 
