Updated Okex API, UI and config tweaks
-Updated Okex API to v3
-UI and config tweaks

--- a/changelog.txt
+++ b/changelog.txt
@@ -996,6 +996,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.4.0:
+-Updated Okex API to v3
+-UI and config tweaks
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
