Updated links on external resources page
Updated links on external resources page

--- a/changelog.txt
+++ b/changelog.txt
@@ -1019,6 +1019,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.4.2:
+-Updated links on external resources page
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
