--- a/changelog.txt
+++ b/changelog.txt
@@ -1039,6 +1039,17 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.4.4:
+-UX / UI tweaks
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
