--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1055,6 +1055,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.4.6:
+-Directory structure optimization
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
