--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1062,6 +1062,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.4.7:
+-UI content revisions
+-Config revisions
+-------------------------------------------------------------------
+
+
+
 
 
 
