--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1087,6 +1087,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.5.0:
+-Updated Kraken API call efficiency 
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
