--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1095,6 +1095,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.5.1:
+-UI content revisions
+-UI / UX enhancements
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
