More UI / UX revisions
-More UI content revisions
-More UI / UX enhancements

--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1103,6 +1103,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.5.2:
+-More UI content revisions
+-More UI / UX enhancements
+-------------------------------------------------------------------
+
+
+
+
 
 
 
