--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1106,7 +1106,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 2.5.2:
 -More UI content revisions
--More UI / UX enhancements
+-More UI / UX enhancements (including cross browser and mobile compatibility)
 -------------------------------------------------------------------
 
 
