--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1115,6 +1115,7 @@ app doing the data requests, not a malicious bot)
 2.5.3:
 -Even more UI content revisions
 -Default config revisions
+-Semantics
 -------------------------------------------------------------------
 
 
