--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1116,6 +1116,7 @@ app doing the data requests, not a malicious bot)
 -Even more UI content revisions
 -Default config revisions
 -Semantics
+-SSL API config setting
 -------------------------------------------------------------------
 
 
