--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1121,6 +1121,18 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+2.5.4:
+-Proxy authentication compatibility
+-Tweaks
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
