Favorite Icon / Start screen image
Favorite Icon / Start screen image

--- a/misc-docs/changelog.txt
+++ b/misc-docs/changelog.txt
@@ -1139,6 +1139,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.01.0:
+-Favorite Icon / Start screen image
+-------------------------------------------------------------------
+
+
+
+
 
 
 
