--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1146,6 +1146,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.02.0:
+-Developer maintenance
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
