--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1149,6 +1149,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.02.0:
 -Developer maintenance
+-New releases link
 -------------------------------------------------------------------
 
 
