--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1154,6 +1154,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.03.0:
+-Tweaks
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
