--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1165,6 +1165,8 @@ app doing the data requests, not a malicious bot)
 3.04.0:
 -Removed cryptopia exchange API support
 -Default config revisions
+-Documentation
+-Optimization
 -------------------------------------------------------------------
 
 
