--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,6 +4,8 @@
 TODO
 ///////////////////////////////////////////////////////
 
+Add additional coin values UI field for what you paid in USD per asset, and then add loss / gain data to UI.
+
 CSV file export / import of portfolio values.
 
 Make sure programming comments are adequate throughout the app.
