--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1171,6 +1171,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.05.0:
+-Dev housekeeping
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
