--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1179,6 +1179,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.05.0:
+-Default config revisions
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
