--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,6 +4,8 @@
 TODO
 ///////////////////////////////////////////////////////
 
+On 'other tools' page, add an auto-updating (via js) satoshi price vs dollars for X amount of tokens, to see dollar value at certain satoshi prices for X amount of coins.
+
 Ability to temporarily hide portfolio data, without deleting it (maybe with a PIN?)
 
 Add additional coin values UI field for what you paid in USD per asset, and then add loss / gain data to UI.
