--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1197,6 +1197,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.08.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
