Minor UX tweaks
Minor UX tweaks

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1220,6 +1220,17 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.09.0:
+-Minor UX tweaks
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
