More minor UX tweaks
More minor UX tweaks

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1228,6 +1228,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.10.0:
+-More minor UX tweaks
+-------------------------------------------------------------------
+
+
+
 
 
 
