--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1245,6 +1245,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.10.0:
+-Gains / losses per token (and total gains / losses)
+-------------------------------------------------------------------
+
+
+
 
 
 
