UX on long settings lists
UX on long settings lists

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1248,6 +1248,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.10.0:
 -Gains / losses per token (and total gains / losses)
+-UX on long settings lists
 -------------------------------------------------------------------
 
 
