--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1255,6 +1255,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.11.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
