Bug fix for passing user agent string to API server
Bug fix for passing user agent string to API server

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1262,6 +1262,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.11.1:
+-Bug fix for passing user agent string to API server
+-------------------------------------------------------------------
+
+
+
+
 
 
 
