--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,7 +4,9 @@
 TODO
 ///////////////////////////////////////////////////////
 
-Add additional coin values UI field for what you paid in USD per asset, and then add loss / gain data to UI.
+Add summary at bottom of portfolio page for percent in USD value held in BTC / percent in USD value held in altcoins
+
+Add a 'backups' main subdirectory, with an index.php file protecting filename listing, which doubles as a download initiator via /backups/?file=FILENAME , AND ONLY ALLOWS DOWNLOADS WITH A X-BIT HASH SUFFIX IN THE FILENAME FOR SECURITY OF BACKUP FILES.
 
 CSV file export / import of portfolio values.
 
