Portfolio page UX revision
Portfolio page UX revision

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1271,6 +1271,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.12.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
